# QZettaListener

./: CMakeLists.txt  README.md  connection.cpp  connection.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagebuffer.cpp  messagebuffer.h  regexparser.h  server.cpp  server.h
Tests/MockZettaClient/: client  client.c  server  server.c
Tests/MockZettaClient/__exampleXMLs/: Broken.xml  LiveTask.xml  Prerec_started.xml
